Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vipul-service3
  namespace: ingress-nginx 
   
spec:
  type: NodePort 
  # type: ClusterIP
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8000
    nodePort: 32200
