Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-ingress
  namespace: ingress-nginx 
  labels:
    app: my-app
spec:
  ingressClassName: nginx
  rules:
    - host: vipul-apps.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vipul-service3
              port:
                number: 80
